# z3c.form

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  AUTHOR.rst  AUTHOR.txt  CHANGES.rst  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.rst  README.txt  TODOS.rst  TODOS.txt  buildout-3.4.cfg  buildout.cfg  conf.py  dev.cfg  doc-requirements.txt  index.txt  pyproject.toml  setup.cfg  setup.py  tox.ini  versions-3.4.cfg
.github/workflows/: tests.yml
.static/: default.css
.templates/: layout.html
benchmark/: setup.py
benchmark/benchmark/: tests.py
docs/: README.rst  authors.rst  conf.py  index.rst  interfaces.rst  todos.rst
docs/advanced/: action.rst  browser-readme.rst  contentprovider.rst  index.rst  validator.rst  widget.rst
docs/informative/: adding.rst  converter.rst  datamanager.rst  index.rst  object-caveat.rst  term.rst  testing.rst  util.rst  value.rst
docs/mustread/: button.rst  field.rst  form.rst  group.rst  index.rst  subform.rst  zcml.rst
docs/widgets/: button.rst  checkbox.rst  file-testing.rst  file.rst  image.rst  index.rst  multi-index.rst  multi.rst  multi_dict_integration.rst  multi_list_integration.rst  object-index.rst  object.rst  object_multi_dict_integration.rst  object_multi_integration.rst  object_multi_list_integration.rst  object_single_integration.rst  objectmulti.rst  orderedselect.rst  password.rst  radio.rst  select-index.rst  select-missing-terms.rst  select-source.rst  select.rst  submit.rst  text.rst  textarea.rst  textlines.rst
src/: index.txt
src/z3c/: __init__.py
src/z3c/form/: CHANGES.txt  README.rst  README.txt  SETUP.cfg  TODO.txt  __init__.py  action.py  action.rst  action.txt  adding.py  adding.txt  apidoc.zcml  button.py  button.rst  button.txt  button.zcml  compatibility.py  config.py  configure.zcml  contentprovider.py  contentprovider.rst  contentprovider.txt  converter.py  converter.rst  converter.txt  converter.zcml  datamanager.py  datamanager.rst  datamanager.txt  datamanager.zcml  dummy.py  error.pt  error.py  error.rst  error.txt  error.zcml  events.py  field.py  field.rst  field.txt  (+58 more)
src/z3c/form/browser/: README.rst  README.txt  button.py  button.rst  button.txt  button.zcml  button_display.pt  button_input.pt  checkbox.py  checkbox.rst  checkbox.txt  checkbox.zcml  checkbox_display.pt  checkbox_hidden.pt  checkbox_input.pt  configure.zcml  file-testing.rst  file-testing.txt  file.py  file.rst  file.txt  file.zcml  file_input.pt  file_testing.zcml  file_testing_input.pt  image.py  image.rst  image.txt  image.zcml  image_display.pt  image_input.pt  index.txt  interfaces.py  multi.py  multi.rst  multi.txt  multi.zcml  multi_dict_integration.rst  multi_dict_integration.txt  multi_display.pt  (+86 more)
src/z3c/form/locales/: z3c.form.pot
src/z3c/form/locales/cs/LC_MESSAGES/: z3c.form.po
src/z3c/form/locales/da/LC_MESSAGES/: z3c.form.po
src/z3c/form/locales/de/LC_MESSAGES/: z3c.form.mo  z3c.form.po
src/z3c/form/locales/en/LC_MESSAGES/: z3c.form.po
src/z3c/form/locales/es/LC_MESSAGES/: z3c.form.po
src/z3c/form/locales/eu/LC_MESSAGES/: z3c.form.po
src/z3c/form/locales/fi/LC_MESSAGES/: z3c.form.po
src/z3c/form/locales/fr/LC_MESSAGES/: z3c.form.mo  z3c.form.po
src/z3c/form/locales/hu/LC_MESSAGES/: z3c.form.po
src/z3c/form/locales/it/LC_MESSAGES/: z3c.form.po
src/z3c/form/locales/ja/LC_MESSAGES/: z3c.form.po
src/z3c/form/tests/: custom_error.pt  integration.css  integration_edit.pt  simple_caredit.pt  simple_display.pt  simple_edit.pt  simple_edit_with_providers.pt  simple_groupedit.pt  simple_nested_groupedit.pt  simple_owneredit.pt  simple_subedit.pt  test_bugfix.py  test_doc.py
(+9 files in other folders)
