[bdist_wheel]
universal = 1

[metadata]
long_description = file:
  README.txt,
  src/z3c/form/README.txt,
  src/z3c/form/form.txt,
  src/z3c/form/group.txt,
  src/z3c/form/subform.txt,
  src/z3c/form/field.txt,
  src/z3c/form/button.txt,
  src/z3c/form/zcml.txt,
  src/z3c/form/validator.txt,
  src/z3c/form/widget.txt,
  src/z3c/form/contentprovider.txt,
  src/z3c/form/action.txt,
  src/z3c/form/value.txt,
  src/z3c/form/datamanager.txt,
  src/z3c/form/converter.txt,
  src/z3c/form/term.txt,
  src/z3c/form/util.txt,
  CHANGES.txt
